@@ -71,5 +71,6 @@ exempt of errors.
 - Tom (tomdev2)
 - Yoichi Nakayama (yoichi)
 - zephyrus (zephyrus00jp)
+- zexian chen
 - Zheng Peng (darkelf2010)
 
